  * checks/copyright-file.pm:
    + [JW] Stop using Data::Alias.  Thanks to Niko Tyni for the bug report.
      (Closes: #834797)
  * checks/cruft.desc:
    + [JW] Fix typo.
  * checks/debhelper.pm:
    + [NT] Remove logic for CDBS creating a compat file when it is absent
      as debhelper now requires a compat file unconditionally.
    + [NT] Support the new named compat levels in debhelper.
  * checks/duplicate-files.desc:
    + [JW] Fix typo.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
    + [JW] Escape dots in some regexps.
    + [NT] Apply patch from Chris Lamb to check that libjs-* packages
      are in the "web" section.  (Closes: #798983)
  * checks/files.{desc,pm}:
    + [JW] Fix typos.
    + [NT] Apply patch from Chris Lamb to catch ".coverage" files in
      packages.  (Closes: #831864)
  * checks/java.desc:
    + [JW] Fix typo.
  * checks/patch-systems.desc:
    + [JW] Fix formatting of some filenames.
  * checks/phppear.{desc,pm}:
    + [JW] Fix typo.
    + [NT] Apply patch from Jochen Sprickerhof to skip this check if the
      package does not contain any php files.  (Closes: #805076)
  * checks/rules.desc:
    + [JW] Fix typo.
    + [JW] Fix tag description formatting.
  * checks/shared-libs.desc:
    + [JW] Fix typos.
  * checks/systemd.{desc,pm}:
    + [NT] Apply patches from Chris Lamb to fix some false positives with
      systemd-service-file-missing-install-key.  (Closes: #837057)

  * data/debhelper/compat-level:
    + [NT] Bump debhelper compat versions with the release of debhelper
      10.
  * data/debhelper/dh_{addons,commands}-manual:
    + [JW] Add dh-autoreconf, which is now a dependency of debhelper.
      Thanks to Michael Biebl for the bug report.  (Closes: #835449)
  * data/debhelper/named-compat-levels:
    + [NT] New file.
  * data/output/manual-references:
    + [JW] Refresh.
  * data/scripts/interpreters:
    + [JW] Add pypy as a known interpreter. Thanks to Sebastian Ramacher