@@ -5,11 +5,28 @@
 
 # Good
 override_dh_install:
+override_dh_install :
+ override_dh_install: #
+prefix_override_dh_gconfs:
 override_dh_will_never_exist:
+override_dh_python2 override_dh_perl :
+override_dh_systemd_enable override_dh_systemd_disable:
+override_dh_auto_configure-% override_dh_auto_install-%:
+foo override_dh_installdeb bar override_dh_installxmlcatalogs: # combining regular and overrides
+
 
 # Bad
+override_dh_nump: # Multiple matches should emit only one tag
 override_dh_instakk:
+ override_dh_installcrons:
 override_dh_install_examples:
+override_dh_install_changelogs : # Extra space
+override_dh_perls override_dh_python2 : # Bad then good
+override_dh_python2 override_dh_perls : # Good then bad
+override_dh_instakk override_dh_install_examples : # Both broken, with space
+foo override_dh_installdebs bar override_dh_installxmlcatalog: # combining regular and overrides
 
-# Multiple matches should emit only one tag
-override_dh_nump:
+# Don't worry about anything beyond a colon even if wrong; it will fail anyway.
+override_dh_testdirs: override_dh_ucfs
+
+.PHONY: override_dh_ucfs
