@@ -1,3 +1,12 @@
-W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_instakk -> override_dh_install (line 11)
-W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_install_examples -> override_dh_installexamples (line 12)
-W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_nump -> override_dh_numpy (line 15)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_instakk -> override_dh_install (line 20)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_instakk -> override_dh_install (line 26)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_install_changelogs -> override_dh_installchangelogs (line 23)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_install_examples -> override_dh_installexamples (line 22)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_install_examples -> override_dh_installexamples (line 26)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_installcrons -> override_dh_installcron (line 21)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_installdebs -> override_dh_installdeb (line 27)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_installxmlcatalog -> override_dh_installxmlcatalogs (line 27)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_nump -> override_dh_numpy (line 19)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_perls -> override_dh_perl (line 24)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_perls -> override_dh_perl (line 25)
+W: debhelper-override-typos source: typo-in-debhelper-override-target override_dh_testdirs -> override_dh_testdir (line 30)
