@@ -13,6 +13,8 @@ lintian (2.5.47) UNRELEASED; urgency=medium
     + [NT] Remove logic for CDBS creating a compat file when it is absent
       as debhelper now requires a compat file unconditionally.
     + [NT] Support the new named compat levels in debhelper.
+    + [NT] Apply patch from Chris Lamb to improve the tag for typoed
+      debhelper override targets.  (Closes: #834370)
   * checks/duplicate-files.desc:
     + [JW] Fix typo.
   * checks/fields.{desc,pm}:
